
name:                awesomium-example
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.8

executable awesomium-example
  hs-source-dirs:  src
  main-is:         Main.hs
  
  build-depends  : base == 4.5.*
                 , ghc-prim
                 , fclabels
                 , OpenGL, GLUT
                 , aeson
                 , awesomium-raw
                 , awesomium
                 , awesomium-glut
